# gospel

./: .#test.mli  .gitignore  404.html  ARCHITECTURE.md  CHANGES.md  README.md  dune-project  faq.html  gospel.opam  gospel_cfml.opam  gospel_iris.opam  index.html  notes.txt  notes.txt~  stdlib.html  test.mli  test.mli~
dev_tools/: dune  gospel.ml  gospel.mli
examples/: BitSet.mli  Boxed.mli  Dyn_array.mli  Eq.mli  Hashset.mli  Hashtbl.mli  Mem_stack.mli  Plain.mli  Ref.mli  Stack.mli  Stack_cfml.mli  alias.mli  bitSet.mli  dyn_array.mli  hashset.mli  hashtbl.mli  hashtbl_prop.mli  mem_stack.mli  mem_stack_memory.mli  mlist.ml  predicates.mli  ref.mli  stack.mli  stack_cfml.mli  stack_charlene.mli  stack_poly.mli  test.mli
getting-started/: first-spec.html  going-further.html  installation.html  tools.html
language/: attributes.html  constant-specifications.html  expressions.html  function-contracts.html  lexical-conventions.html  logical.html  scope.html  semantics.html  syntax.html  type-specifications.html
src/: #tast2sep.ml#  .#coq.ml  .#sep2coq.ml  .#uast.mli  (+80 more)
stdlib/: bin_utils.ml  checklib.ml  dune  gospelstdlib.mli  ocamlprimitives.mli
stdlib/coq/: _CoqProject  dune  gospelstdlib_mli_stdpp.v  gospelstdlib_mli_tlc.v  gospelstdlib_verified_stdpp.v  gospelstdlib_verified_tlc.v  iris_core.v  primitives.v
stdlib/coq/CFML/: base.v  cfml_core.v  dune  gospelstdlib_verified.v
stdlib/coq/iris/: base.v  dune  gospelstdlib_mli.v  gospelstdlib_mli_stdpp.v  gospelstdlib_proof.v  gospelstdlib_verified_stdpp.v  heap.v  ocamlprimitives_mli.v  ocamlprimitives_proof.v
(+266 files in other folders)
